--- a/Práctica 2/Ficheros/vga_top.qsf
+++ b/Práctica 2/Ficheros/vga_top.qsf
@@ -84,6 +84,8 @@ set_location_assignment PIN_A11 -to VGA_B[4]
 set_location_assignment PIN_C12 -to VGA_B[5]
 set_location_assignment PIN_D11 -to VGA_B[6]
 set_location_assignment PIN_D12 -to VGA_B[7]
-set_location_assignment PIN_M23 -to DOWN
-set_location_assignment PIN_M21 -to UP
+set_location_assignment PIN_N21 -to DOWN_IZQ
+set_location_assignment PIN_R24 -to UP_IZQ
+set_location_assignment PIN_M23 -to DOWN_DER
+set_location_assignment PIN_M21 -to UP_DER
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
